edit profile view created

--- a/Public/Login.html
+++ b/Public/Login.html
@@ -60,7 +60,7 @@
                 </div>
             </form>
             <p class="text-center text-gray-500 text-xs">
-                &copy;2020 Acme Corp. All rights reserved.
+                &copy;2020 Ace Corp. All rights reserved.
             </p>
         </div>
     </div>
