user-detail style and get requests done

--- a/Public/my-profile.html
+++ b/Public/my-profile.html
@@ -32,7 +32,7 @@
             </div>
         </div>
     </nav>
-    <div class="container mx-auto">
+    <div class="container mx-auto flex">
         <div class="w-full max-w-sm mx-auto mt-32">
             <form class="w-full max-w-sm">
                 <div class="md:flex md:items-center mb-6">
@@ -70,6 +70,18 @@
             <p class="text-center text-gray-500 text-xs">
                 &copy;2020 Ace Corp. All rights reserved.
             </p>
+        </div>
+        <div class="w-full max-w-sm mx-auto mt-32">
+            <form action="" class="flex flex-col justify-center items-center">
+                <img class="h-28  rounded-full  mb-4" src="./images/avatar.png">
+                <button class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded inline-flex items-center ">
+                    <svg class="fill-current w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M13 8V2H7v6H2l8 8 8-8h-5zM0 18h20v2H0v-2z"/></svg>
+                    <span>Download</span>
+                  </button>
+
+            </form>
+
+
         </div>
     </div>
 </body>
