home view created

--- a/Public/home.html
+++ b/Public/home.html
@@ -36,5 +36,36 @@
         </div>
     </nav>
 
+    <div class="lg:container lg:mx-auto">
+        <div class="boards-list">
+            <div class="boards-container" id="starred">
+                <h1 class="font-semibold text-xl tracking-wide text-blue-800 mx-2 leading-loose"> <i class="fas fa-star text-blue-500"></i> Starred Boards</h1>
+                <div class="boards flex flex-wrap">
+                    <div class="board border w-40 h-24 rounded mx-4 my-2 relative overflow-hidden">
+                        <h6 class="font font-semibold text-base p-2">Board name</h6>
+                        <i class="far fa-star  text-gray-400 absolute bottom-0 right-0 p-3"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="boards-container " id="personal ">
+                <h1 class="font-semibold text-xl tracking-wide text-blue-800 mx-2 leading-loose "> <i class="fas fa-user text-blue-500 "></i> Personal Boards</h1>
+                <div class="boards flex flex-wrap">
+                    <div class="board border w-40 h-24 rounded mx-4 my-2 relative overflow-hidden">
+                        <h6 class="font font-semibold text-base p-2">Board name</h6>
+                        <i class="far fa-star  right text-gray-400 absolute bottom-0 right-0 p-3"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="boards-container " id="teams ">
+                <h1 class="font-semibold text-xl tracking-wide text-blue-800 mx-2 leading-loose "> <i class="fas fa-users text-blue-500 "></i> Team Boards</h1>
+                <div class="boards flex flex-wrap">
+                    <div class="board border w-40 h-24 rounded mx-4 my-2 relative overflow-hidden">
+                        <h6 class="font font-semibold text-base p-2">Board name</h6>
+                        <i class="far fa-star right text-gray-400 absolute bottom-0 right-0 p-3"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
