--- a/Public/board.html
+++ b/Public/board.html
@@ -22,16 +22,16 @@
     <!-- Nav with User -->
     <nav>
         <div class="flex">
-            <div class="logo"><img src="./images/logo.jpg" alt=""></div>
-            <a href="" class="font-semibold text-xl tracking-wide text-gray-600 mx-3 leading-loose">Boards</a>
-            <a href="" class="font-semibold text-xl tracking-wide text-gray-600 mx-2 leading-loose">Teams</a>
+            <div class="logo-img"><img src="./images/logo.jpg" onclick="location.href='/'"></div>
+            <a href="/my-boards" class="font-semibold text-xl tracking-wide text-gray-600 mx-3 leading-loose">Boards</a>
+            <a href="/teams" class="font-semibold text-xl tracking-wide text-gray-600 mx-2 leading-loose">Teams</a>
             <div class="w-1/5 ml-4">
-                <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-500" id="inline-full-name" type="text" value="Jane Doe">
+                <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-500" type="text" placeholder="Search">
             </div>
             <div class="nav-auth">
                 <i class="fas fa-bell text-4xl relative text-blue-500 mx-3"></i>
-                <img class=" h-10 rounded-full mx-auto md:mx-0 md:mr-3 inline-block" src="./images/avatar.png">
-                <button class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">Log out</button>
+                <img class=" h-10 w-10 rounded-full mx-auto md:mx-0 md:mr-3 inline-block" src="./images/UserProfiles/5f4e83e946af490d4ce329fd.jpeg" onclick="location.href='/my-profile'">
+                <button class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded" onclick="location.href = '/logout'">Log out</button>
             </div>
         </div>
     </nav>
