--- a/Public/layout.html
+++ b/Public/layout.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <!-- CSS only -->
+    <!-- Tailwind CSS -->
     <link rel="stylesheet" href="./css/styles.css">
+    <!-- My CSS -->
     <link rel="stylesheet" href="./css/style.css">
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/e3658e79d2.js" crossorigin="anonymous"></script>
-
     <!--  jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 </head>
