--- a/Public/board.html
+++ b/Public/board.html
@@ -36,5 +36,17 @@
         </div>
     </nav>
 
+    <div class="lists">
+        <div class="list"></div>
+        <div class="add-list mx-4 relative w-64 pt-3 pl-2">
+            <i class="fas fa-plus text-gray-600  absolute"></i>
+            <input class="js-create-list bg-gray-200 appearance-none w-64 border-2 border-gray-200 rounded  py-2  pl-10 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-500" type="text" placeholder="Add a list">
+            <button class="js-add-list-button hidden bg-green-400 hover:bg-green-600 text-white font-bold py-2 px-4   mt-2 rounded"> Add list</button>
+        </div>
+
+    </div>
+    </div>
+
+    <script src="./JS/listHandler.js"></script>
 
 </body>
