board block created

--- a/Public/board.html
+++ b/Public/board.html
@@ -37,7 +37,7 @@
     </nav>
 
     <div class="lists flex ">
-        <div class="list mx-4 relative w-64 bg-gray-200 rounded h-auto">
+        <div class="list  mx-4 relative w-64 bg-gray-200 rounded h-auto">
             <div class="header flex justify-between p-3 text-color">
                 <h1 class="font-bold text-xl mb-2">List name</h1>
                 <i class="fas fa-ellipsis-h cursor-pointer hover:bg-gray-300 px-1 h-5 rounded"></i>
@@ -51,8 +51,8 @@
                 </ul>
                 <div class="add-card relative">
                     <i class="fas fa-plus text-gray-600  absolute"></i>
-                    <input class="js-create-card bg-gray-200 appearance-none w-64 border-2 border-gray-200 rounded  py-2  pl-8 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-500" type="text" placeholder="Add a list">
-                    <button class="js-add-card-button hidden bg-green-400 hover:bg-green-600 text-white font-bold py-2 px-4   mt-2 rounded"> Add list</button>
+                    <textarea class="block js-create-card bg-gray-200 appearance-none  rounded  pt-2  pl-8 text-gray-700 leading-tight focus:outline-none focus:bg-white mx-auto resize-none" type="text" placeholder="Add a list"></textarea>
+                    <button class="js-add-card-button hidden bg-green-400 hover:bg-green-600 text-white font-bold py-2 px-4  mx-2 mt-2 rounded"> Add list</button>
                 </div>
             </div>
         </div>
