--- a/Public/board.html
+++ b/Public/board.html
@@ -36,8 +36,29 @@
         </div>
     </nav>
 
-    <div class="lists flex ">
-        <div class="list  mx-4 relative w-64 bg-gray-200 rounded h-auto">
+    <div class="lists flex flex-1">
+
+
+        <div id="312" class="list  mx-4 relative w-64 bg-gray-200 rounded ">
+            <div class="header flex justify-between p-3 text-color">
+                <h1 class="font-bold text-xl mb-2">List name</h1>
+                <i class="fas fa-ellipsis-h cursor-pointer hover:bg-gray-300 px-1 h-5 rounded"></i>
+            </div>
+            <div class="body">
+                <ul>
+                    <li class="bg-white rounded  mx-auto my-2 px-2 py-1">Card</li>
+                    <li class="bg-white rounded  mx-auto my-2 px-2 py-1">Card</li>
+                    <li class="bg-white rounded  mx-auto my-2 px-2 py-1">Card</li>
+                    <li class="bg-white rounded  mx-auto my-2 px-2 py-1">Card</li>
+                </ul>
+                <div class="add-card relative">
+                    <i class="fas fa-plus text-gray-600  absolute"></i>
+                    <textarea oninput='this.style.height = "";this.style.height = this.scrollHeight + "px"' class="block js-create-card bg-gray-200 appearance-none  rounded  pt-2  pl-8 text-gray-700 leading-tight focus:outline-none mx-auto resize-none" type="text" placeholder="Add a list"></textarea>
+                    <button class="js-add-card-button mb-2 hidden bg-green-400 hover:bg-green-600 text-white font-bold py-2 px-4  mx-2 mt-2 rounded"> Add list</button>
+                </div>
+            </div>
+        </div>
+        <div class="list  mx-4 relative w-64 bg-gray-200 rounded ">
             <div class="header flex justify-between p-3 text-color">
                 <h1 class="font-bold text-xl mb-2">List name</h1>
                 <i class="fas fa-ellipsis-h cursor-pointer hover:bg-gray-300 px-1 h-5 rounded"></i>
@@ -52,7 +73,26 @@
                 <div class="add-card relative">
                     <i class="fas fa-plus text-gray-600  absolute"></i>
                     <textarea class="block js-create-card bg-gray-200 appearance-none  rounded  pt-2  pl-8 text-gray-700 leading-tight focus:outline-none focus:bg-white mx-auto resize-none" type="text" placeholder="Add a list"></textarea>
-                    <button class="js-add-card-button hidden bg-green-400 hover:bg-green-600 text-white font-bold py-2 px-4  mx-2 mt-2 rounded"> Add list</button>
+                    <button class="js-add-card-button mb-2 hidden bg-green-400 hover:bg-green-600 text-white font-bold py-2 px-4  mx-2 mt-2 rounded"> Add list</button>
+                </div>
+            </div>
+        </div>
+        <div class="list  mx-4 relative w-64 bg-gray-200 rounded ">
+            <div class="header flex justify-between p-3 text-color">
+                <h1 class="font-bold text-xl mb-2">List name</h1>
+                <i class="fas fa-ellipsis-h cursor-pointer hover:bg-gray-300 px-1 h-5 rounded"></i>
+            </div>
+            <div class="body">
+                <ul>
+                    <li class="bg-white rounded  mx-auto my-2 px-2 py-1">Card</li>
+                    <li class="bg-white rounded  mx-auto my-2 px-2 py-1">Card</li>
+                    <li class="bg-white rounded  mx-auto my-2 px-2 py-1">Card</li>
+                    <li class="bg-white rounded  mx-auto my-2 px-2 py-1">Card</li>
+                </ul>
+                <div class="add-card relative">
+                    <i class="fas fa-plus text-gray-600  absolute"></i>
+                    <textarea class="block js-create-card bg-gray-200 appearance-none  rounded  pt-2  pl-8 text-gray-700 leading-tight focus:outline-none focus:bg-white mx-auto resize-none" type="text" placeholder="Add a list"></textarea>
+                    <button class="js-add-card-button mb-2 hidden bg-green-400 hover:bg-green-600 text-white font-bold py-2 px-4  mx-2 mt-2 rounded"> Add list</button>
                 </div>
             </div>
         </div>
