--- a/Public/layout.htm
+++ b/Public/layout.htm
@@ -52,7 +52,7 @@
         </div>
     </nav>
 
-    <script src="./JS//navHandler.js"></script>
+    <script src="./JS/navHandler.js"></script>
 
 </body>
 
